# Hack-Club-AI-Bot

./: .replit  README.md  ai.py  main.py  messages.json  pyproject.toml  utils.py
json_data/: consent_prompt.json  consent_prompt_no_btn.json  messages.json  prompt_consented.json  response_prompt.json
